fix: Main on mobile

--- a/components/Main/Main.module.scss
+++ b/components/Main/Main.module.scss
@@ -121,3 +121,20 @@
     bottom: calc(20vw - 10px);
   }
 }
+
+@media screen and (max-width: 375px) {
+  .title {
+    font-size: 30px;
+    margin-left: 16px;
+  }
+
+  .subtitle {
+    font-size: 14px;
+  }
+
+  .rotate {
+    font-size: 11px;
+    bottom: 27px;
+    left: -19px;
+  }
+}
